# bellwether

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  ROADMAP.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  methodology.md  new_task_or_provider.md
.github/workflows/: publish.yml  test.yml
docs/: glossary.html  index.html  methodology.html
docs/tasks/: function_call_routing.html  structured_extraction.html  synthetic_rag.html
results/2026-05-06/anthropic/: structured_extraction__2eb9d9a.json  structured_extraction__423a52c.json  structured_extraction__423a52c__012525.json
results/2026-05-06/google/: structured_extraction__2eb9d9a.json  structured_extraction__423a52c.json  structured_extraction__423a52c__012611.json
results/2026-05-06/openai/: structured_extraction__2eb9d9a.json  structured_extraction__423a52c.json  structured_extraction__423a52c__012538.json
results/2026-05-08/anthropic/: function_call_routing__claude-haiku-4-5__46ce0a5.json  function_call_routing__claude-opus-4-7__46ce0a5.json  function_call_routing__claude-sonnet-4-6__46ce0a5.json  function_call_routing__d95fbc2.json  function_call_routing__d95fbc2__013925.json  function_call_routing__d95fbc2__013935.json  function_call_routing__e6e987c.json  function_call_routing__e6e987c__015642.json  function_call_routing__e6e987c__015651.json  synthetic_rag__d95fbc2.json  (+17 more)
site/: build.py  glossary.html.j2  glossary.md  index.html.j2  methodology.html.j2  task_detail.html.j2
src/bellwether/: __init__.py  cli.py  critique.py  guardrail.py  pricing.py  protocols.py  runner.py  taxonomy.py  tcot.py
tests/: test_anthropic_adapter.py  test_critique.py  test_function_call_routing.py  test_google_adapter.py  test_guardrail.py  test_openai_adapter.py  test_pricing.py  test_runner.py  test_structured_extraction.py  test_synthetic_rag.py  test_taxonomy.py  test_tcot.py
(+188 files in other folders)
